# dl2_tools

./: .gitignore  CITATION.cff  README.md  setup.cfg
.github/workflows/: ci.yml  docs.yml
docs/: index.rst
examples/: irfs_from_dl2.ipynb  roc_from_dl2.ipynb  roc_optimized_cuts_from_dl2.ipynb  sensitivity_from_irfs.ipynb
src/dl2_tools/data/irfs/: Aeff_true_0.01TeV_200.0TeV_49bins_fov_off_0.0deg_0.1deg_1bins_.fits  Edisp_true_0.01TeV_200.0TeV_49bins_reco_0.01_10.0_49bins_fov_off_0.0deg_0.1deg_1bins_.fits  PSF_true_0.01TeV_200.0TeV_49bins_psf_off_0.0deg_2.0deg_499bins_fov_off_0.0deg_0.1deg_1bins_.fits  bkg_reco_0.01TeV_200.0TeV_49bins_fov_off_0.0deg_10.0deg_9bins_.fits
src/dl2_tools/handler/: __init__.py  binning.py  data_lists.py  interpolated_cuts.py  irf_handler.py  observation_handler.py  sim_datasets.py
src/dl2_tools/maker/: __init__.py  cut_optimizer.py  irf_maker.py  ps_sensitivity_calculator.py  roc_maker.py
src/dl2_tools/tools/: irf_tool.py  percentile_cut_tool.py  ps_sensitivity_cut_optimizer_tool.py
tests/: test_data_lists.py  test_sim_datasets.py
