[metadata]
name = dl2_tools
version = 0.0.2
author = Georg Schwefer
author_email = georg.schwefer
description = A package for handling dl2 ctapipe output and producing dl3 data from it.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE
url = https://github.com/mpi-astronomy/mpia-python-template
project_urls =
    Bug Tracker = https://github.com/mpi-astronomy/mpia-python-template/issues
    Source Code = https://github.com/mpi-astronomy/mpia-python-template
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires= >=3.10

# Example of how to add dependencies:
install_requires =
    importlib-metadata >= 2.0 ; python_version < "3.8"
    pyirf @ git+https://github.com/gschwefer/pyirf.git@dl2_tools_compatible
    ctapipe
    numpy
    scipy 
    gammapy
    ctapipe >= 0.19
    dill
    
[options.packages.find]
where = src

[options.package_data]
dl2_tools =
    data/dl2_files

[options.extras_require]
docs =
  sphinx
  sphinx-automodapi
  numpydoc
test =
  pytest
  pytest-doctestplus
  flake8
  codecov
  pytest-cov


[options.entry_points]
console_scripts =
    irf-maker = dl2_tools.tools.irf_tool:main
    percentile-cut-maker = dl2_tools.tools.percentile_cut_tool:main
    ps-senstivity-cut-optimizer = dl2_tools.tools.ps_sensitivity_cut_optimizer_tool:main